<resources>
    <string name="app_name">Formula 1</string>
    <string name="results">Results </string>
    <string name="calendar">Schedule</string>
    <string name="teams"> Teams </string>
    <string name="drivers">Drivers</string>
    <string name="downloads">Downloads</string>
    <string name="podium">Podium Finishes </string>
    <string name="titles">Championship Titles</string>
    <string name="races">Races</string>
    <string name="standings_drivers_2018">2018 Drivers standing</string>
    <string name="standings_drivers_2017">2017 Drivers standing</string>
    <string name="standings_drivers_2016">2016 Drivers standing</string>
    <string name="standings_drivers_2015">2015 Drivers standing</string>
    <string name="standings_drivers_2014">2014 Drivers standing</string>
    <string name="standings_drivers_2013">2013 Drivers standing</string>
    <string name="position">Pos</string>
    <string name="nationality">Nationality</string>
    <string name="car">Car</string>
    <string name="points">Points</string>
    <string name="team"> Team </string>
    <string name="country"> Country </string>
    <string name="podiums"> Podiums </string>
    <string name="gp_entered">Grand Prix entered</string>
    <string name="world_chmapionships">World Championships </string>
    <string name="standings_teams_2018">2018 Teams standing</string>
    <string name="standings_teams_2017">2017 Teams standing</string>
    <string name="standings_teams_2016">2016 Teams standing</string>
    <string name="standings_teams_2015">2015 Teams standing</string>
    <string name="standings_teams_2014">2014 Teams standing</string>
    <string name="standings_teams_2013">2013 Teams standing</string>
    <string name="wins">Wins</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="onclickquit">Good Bye !</string>
    <string name="onclicknotquit">Yeah stay with us !</string>
    <string name="quit">Do you really want to quit ?</string>
    <string name="download_picture">Download Picture</string>
    <string name="schedule">Schedule</string>
    <string name="toastteams">Click on the car to see it completety</string>
    <string name="toastschedule">Click to see the location of the circuit</string>
</resources>
